--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -90,6 +90,12 @@ blockquote {
   }
 }
 
+// Education
+.education {
+  .school-name {
+    font-weight: bolder;
+  }
+}
 
 // Navbar customization
 
@@ -212,7 +218,7 @@ blockquote {
 .social {
   text-align: center;
   .contact-icons {
-    font-size: 4rem;
+    font-size: 2rem;
     a {
       i::before {
         color: var(--global-text-color);
