--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,7 +6,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">
-     {% if site.title == "blank" %}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{% else %}{{ site.title }}{% endif %}
+      <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}
     </h1>
      <p class="desc">{{ page.description }}</p>
   </header>
@@ -21,6 +21,12 @@ layout: default
           alt: {{ page.profile.image }}
         {% endresponsive_image_block %}
       {% endif %}
+        <div class="social">
+          <div class="contact-icons">
+            {% include social.html %}
+          </div>
+          <div class="contact-note">{{ site.contact_note }}</div>
+        </div>
       {% if page.profile.address %}
         <div class="address">
           {{ page.profile.address }}
@@ -33,21 +39,24 @@ layout: default
       {{ content }}
     </div>
 
+    {% include education.html %}
+
     {% if page.news %}
       {% include news.html %}
     {% endif %}
 
-    {% if page.selected_papers %}
-      {% include selected_papers.html %}
+    {% if page.publications %}
+    <div class="publications">
+      <h2>Publications</h2>
+      {% for y in page.publications.years %}
+        <h2 class="year">{{y}}</h2>
+        {% bibliography -f papers -q @*[year={{y}}]* %}
+      {% endfor %}
+    </div>
     {% endif %}
 
-    {% if page.social %}
-    <div class="social">
-      <div class="contact-icons">
-        {% include social.html %}
-      </div>
-      <div class="contact-note">{{ site.contact_note }}</div>
-    </div>
+    {% if page.selected_papers %}
+      {% include selected_papers.html %}
     {% endif %}
   </article>
 
