--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -47,7 +47,7 @@ layout: default
 
     {% if page.publications %}
     <div class="publications">
-      <h2>Publications</h2>
+      <h2 id="publications">Publications</h2>
       {% for y in page.publications.years %}
         <h2 class="year">{{y}}</h2>
         {% bibliography -f papers -q @*[year={{y}}]* %}
