--- a/_includes/education.html
+++ b/_includes/education.html
@@ -7,13 +7,11 @@
     </div>
     <div class="col-9">
       <div class="school-name">
-        <a href="https://en.snu.ac.kr/">Seoul National University</a>
+        <a href="https://www.utexas.edu/">The University of Texas at Austin</a>
       </div>
-      
+
       <ul class="list-unstyled">
-        <li>B.S. in Computer Science & Engineering</li>
-        <li>B.S. in Mathematical Sciences (Double Major)</li>
-        <li>GPA: 4.06/4.30 (Overall), 4.23/4.30 (Major), 4.28/4.30 (Upper)</li>
+        <li>Ph.D. Student in Computer Science, 2022-Present</li>
       </ul>
     </div>
   </div>
@@ -24,8 +22,13 @@
     </div>
     <div class="col-9">
       <div class="school-name">
-        <a href="http://en.sshs.hs.kr/html/index.php">Seoul Science High School</a>
+        <a href="https://en.snu.ac.kr/">Seoul National University</a>
       </div>
+      
+      <ul class="list-unstyled">
+        <li>B.S. in Computer Science & Engineering, Summa cum laude</li>
+        <li>B.S. in Mathematical Sciences (Double Major)</li>
+      </ul>
     </div>
   </div>
 </div>
