--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -78,9 +78,9 @@
       {% if entry.month %}
         {{entry.month | capitalize}}
       {% endif %}
-      {% if entry.year %}
+      <!-- {% if entry.year %}
         {{entry.year}}
-      {% endif %}
+      {% endif %} -->
       </div>
     {% endif %}
 
